--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
               <form action="/action.php">
                 <textarea name="message"rows="10" cols="auto" placeholder="Type Here"></textarea>
                 <br><br>
-                <input class="btn btn-primary" type="submit">
+                <input class="btn btn-primary" type="submit" value="Submit">
               </form>
            
           </div>
